<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/app_gradient_bg"
    android:gravity="center_horizontal|center_vertical"
    tools:context="com.example.luis.testyourspeed.gameActivities.MainActivity">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_singleplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singleplayer"
            android:textSize="28sp"
            android:background="@drawable/button_state"
            android:textColor="#37474F"
            android:shadowColor="#050505"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="onClickBtn"

            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical" />

        <Button
            android:id="@+id/btn_multiplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer"
            android:textSize="28sp"
            android:background="@drawable/button_state"
            android:textColor="#37474F"
            android:shadowColor="#050505"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="onClickBtn"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/btn_highscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscores"
            android:textSize="28sp"
            android:background="@drawable/button_state"
            android:textColor="#37474F"
            android:shadowColor="#050505"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="onClickBtn"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/btn_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textSize="28sp"
            android:background="@drawable/button_state"
            android:textColor="#37474F"
            android:shadowColor="#050505"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="onClickBtn"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</RelativeLayout>
