<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/app_gradient_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textSize="24sp"
            android:textColor="@color/colorGameText"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal"
            />

    <TextView
        android:id="@+id/tv_wpm_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/colorGreen"
        android:layout_marginTop="14dp"
        android:textSize="64sp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="wpm"
            android:layout_marginTop="14dp"
            android:textSize="24sp"
        android:textColor="@color/colorGameText"
            android:gravity="center_horizontal|center_vertical"
            android:layout_gravity="center_horizontal"
            />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlueLines"
        android:layout_marginTop="46dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/accuracy"
                android:textSize="24sp"
                android:textColor="@color/colorGameText"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/tv_accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textSize="28sp"
                android:textColor="@color/colorGreen"
                android:gravity="center_horizontal|center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:textSize="24sp"
                android:textColor="@color/colorGameText"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal|center_vertical"
                />
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlueLines"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/right_words"
                android:textSize="24sp"
                android:textColor="@color/colorGameText"
                android:gravity="center_horizontal|center_vertical"
                />

            <TextView
                android:id="@+id/tv_rigth_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textSize="28sp"
                android:textColor="@color/colorGreen"
                android:gravity="center_horizontal|center_vertical"
                />
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlueLines"
        android:layout_marginTop="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/wrong_words"
                android:textSize="24sp"
                android:textColor="@color/colorGameText"
                android:gravity="center_horizontal|center_vertical"
                />

            <TextView
                android:id="@+id/tv_wrong_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="0"
                android:textSize="28sp"
                android:textColor="@color/colorRed"
                android:gravity="center_horizontal|center_vertical"
                />
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlueLines"
        android:layout_marginTop="6dp" />
</LinearLayout>